welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:3: error: not found: value &
    case (aSmile & bSmile) => return true
                 ^monkeyTrouble:4: error: value aSmile is not a case class, nor does it have an unapply/unapplySeq member
    case (!aSmile & !bSmile) => return true
           ^monkeyTrouble:4: error: not found: value !
    case (!aSmile & !bSmile) => return true
          ^monkeyTrouble:4: error: not found: value !
    case (!aSmile & !bSmile) => return true
                    ^monkeyTrouble:4: error: not found: value &
    case (!aSmile & !bSmile) => return true
                  ^